--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/logo.png" />
+		<link rel="icon" href="/static/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
+		<style>
+			/* Inline CSS to set the background image */
+			body {
+				margin: 0; /* Remove default margins */
+				height: 100vh; /* Set body height to 100% of the viewport height */
+				background-image: url("/static/zen_stones.png"); /* Specify the image URL */
+				background-size: cover; /* Ensure the image covers the entire background */
+				background-repeat: no-repeat; /* Prevent the image from repeating */
+				background-position: center; /* Center the image */
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
