--- a/src/app.html
+++ b/src/app.html
@@ -2,19 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/static/logo.png" />
+		<link rel="icon" href="/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			/* Inline CSS to set the background image */
 			body {
 				margin: 0; /* Remove default margins */
 				height: 100vh; /* Set body height to 100% of the viewport height */
-				background-image: url("/static/zen_stones.png"); /* Specify the image URL */
+				background-image: url("/zen_stones.png"); /* Specify the image URL */
 				background-size: cover; /* Ensure the image covers the entire background */
 				background-repeat: no-repeat; /* Prevent the image from repeating */
 				background-position: center; /* Center the image */
 			}
 		</style>
+		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
