--- a/build-static/index.html
+++ b/build-static/index.html
@@ -16,25 +16,26 @@
 			}
 		</style>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BL1sx7bC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CRjh7pxA.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BEI-Xtp0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C1NMH8UZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DSc-m6qX.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cx3BYlak.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BWG6DQXN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CK6ZYMmE.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CI6WUcPq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CYeYiRDo.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_356e6z = {
+					__sveltekit_1halm2a = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BL1sx7bC.js"),
-						import("/_app/immutable/entry/app.Cx3BYlak.js")
+						import("/_app/immutable/entry/start.BEI-Xtp0.js"),
+						import("/_app/immutable/entry/app.CI6WUcPq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
